# bots

./: Cargo.toml  Dockerfile  README.md  build.sh  flake.nix  rust-toolchain.toml  shell.nix
src/: ai.rs  image.rs  main.rs  matrix.rs  message_buffer.rs  webhook.rs
src/bots/: ai.rs  home.rs  mod.rs  money.rs  owen.rs  photo.rs
