[package]
name = "bots"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
rusqlite = { version = "0.27.0", features = ["bundled"] }
rusty-money = { version = "0.4.0", features = ["iso"] }
matrix-sdk = { version = "0.4", features = [] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

anyhow = "1.0"
chrono = "0.4"
dirs = "4.0"
futures = "0.3"
serde_json = "1.0"
